Bug 465448. Perform sanity check to avoid resizing a window smaller than the content area we're trying to achieve. r+sr=bzbarsky

--HG--
extra : rebase_source : 57e7e4e95ec2c100b8ceaa66864f6dfb5ba1cc86